--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
-  "name": "Borderify",
+  "name": "BinaryConverter",
   "version": "1.0",
 
-  "description": "Adds a red border to all webpages matching mozilla.org.",
+  "description": "Converts integers on screen to binary.",
 
   "icons": {
     "48": "icons/icon.png"
@@ -12,7 +12,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["borderify.js"]
+      "js": ["./findAndReplaceDOMText.js", "./binarify.js"]
     }
   ]
 }
