--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
-			"js": ["./findAndReplaceDOMText.js", "./binarify.js"]
+		"js": ["scripts/binary_fractions.js", "scripts/findAndReplaceDOMText.js", "scripts/binarify.js"]
 		}
 	],
 	"browser_specific_settings": {
