--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"manifest_version": 3,
+	"manifest_version": 2,
 	"name": "BinaryConverter",
 	"version": "1.0",
 
@@ -14,6 +14,11 @@
 			"matches": ["<all_urls>"],
 		"js": ["scripts/binary_fractions.js", "scripts/findAndReplaceDOMText.js", "scripts/binarify.js"]
 		}
-	]
+	],
+	"browser_specific_settings": {
+		"gecko": {
+			"id": "binary_converter@tremblinginferno.com"
+		}
+	}
 }
 
