--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
-		"js": ["scripts/binary_fractions.js", "scripts/findAndReplaceDOMText.js", "scripts/binarify.js"]
+			"js": ["scripts/lucillian_font.js","scripts/binary_fractions.js", "scripts/findAndReplaceDOMText.js", "scripts/binarify.js"],
+			"css": ["scripts/LucillianFont.css"]
 		}
 	],
 	"browser_specific_settings": {
